--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Repo for a talk on Tester day GeoSTQB",
   "scripts": {
-    "start": "cd trelloapp && npm start"
+    "start": "cd trelloapp && npm start",
+    "postinstall": "cd trelloapp && npm install"
   },
   "keywords": [],
   "author": "Filip Hric (https://filiphric.com/)",
